--- a/Lesson-5/doc/关于部署.md
+++ b/Lesson-5/doc/关于部署.md
@@ -16,14 +16,16 @@
 
 ## 静态资源上传七牛 CDN
 
-1. 新建存储对象
+1. 七牛上新建存储对象
 
-2. CDN 域名放入配置中
+2. 其 CDN 域名放入 config 配置文件中
 
-3. 安装 SDK
+3. 安装七牛 SDK
 
-4. 编写配置文件
+4. 编写上传文件
 
-5. 上传
+5. 执行上传
 
 6. 更改 webpack 配置中的 publicPath 为 CDN 地址
+
+7. 新增 npm run 命令
